Updating main page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html data-wf-page="5f71dd169010d6326b65485d">
   <head>
     <meta charset="utf-8">
-    <title>Horus</title>
+    <title>Try Horus</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -47,11 +47,11 @@
     <div class="section header">
       <div class="container">
         <div class="hero-text-container">
-          <h1 class="h2 centered">Horus <span id="spin">collects</span></h1>
-          <h1 class="h2 centered">your logs and metrics.</h1>
+          <h1 class="h2 centered">Horus <span id="spin">connects</span></h1>
+          <h1 class="h2 centered">your metrics and traces.</h1>
           <br><br>
           <p class="intro-paragraph white-paragraph centered bottom-margin">
-            Dendro is an open-source, serverless monitoring framework for small, distributed applications.
+            Dendro is an open-source observability solution for microservices.
           </p>
           <div class="button-container">
             <a href="/case-study" class="primary-button right-margin w-inline-block">
