updated header with colour scheme

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h1 class="h2 centered">your metrics and traces.</h1>
           <br><br>
           <p class="intro-paragraph white-paragraph centered bottom-margin">
-            Dendro is an open-source observability solution for microservices.
+            Horus is an open-source observability solution for microservices.
           </p>
           <div class="button-container">
             <a href="/case-study" class="primary-button right-margin w-inline-block">
