--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
           <h1 class="h2 centered">your metrics and traces.</h1>
           <br><br>
           <p class="intro-paragraph white-paragraph centered bottom-margin">
-            Horus is an open-source observability solution for microservices.
+            Horus is an open-source observability solution for microservices. Users can generate, store, and visualize 
+            correlated telemetry data, allowing them to see the real-time health of their application.
           </p>
           <div class="button-container">
             <a href="/case-study" class="primary-button right-margin w-inline-block">
