--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="navigation-right">
             <div class="login-buttons">
               <a href="https://github.com/dendro-monitoring/dendro" target="_blank">
-                <span style="color: #161d6f">
+                <span style="color: #081b53">
                   <i class="fab fa-github fa-lg"></i>
                 </span>
               </a>
@@ -52,7 +52,7 @@
           <br><br>
           <p class="intro-paragraph white-paragraph centered bottom-margin">
             Horus is an open-source observability solution for microservices. Users can generate, store, and visualize 
-            correlated telemetry data, allowing them to see the real-time health of their application.
+            correlated telemetry to see the real-time health of their application.
           </p>
           <div class="button-container">
             <a href="/case-study" class="primary-button right-margin w-inline-block">
