updating landing page text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <br><br>
           <p class="intro-paragraph white-paragraph centered bottom-margin">
             Horus is an open-source observability solution for microservices. Users can generate, store, and visualize 
-            correlated telemetry to see the real-time health of their application.
+            telemetry to see the real-time health of their application.
           </p>
           <div class="button-container">
             <a href="/case-study" class="primary-button right-margin w-inline-block">
