making changes to landing page elements

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           <h1 class="h2 centered">your metrics and traces.</h1>
           <br><br>
           <p class="intro-paragraph white-paragraph centered bottom-margin">
-            Horus is an open-source observability solution for microservices. Users can generate, store, and visualize 
-            telemetry to see the real-time health of their application.
+            Horus is an open-source observability solution for microservices. 
+            Users can generate, store, and visualize telemetry to see the real-time health of their application.
           </p>
           <div class="button-container">
             <a href="/case-study" class="primary-button right-margin w-inline-block">
