added link to repo in the header

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
           <div class="navigation-right">
             <div class="login-buttons">
-              <a href="https://github.com/dendro-monitoring/dendro" target="_blank">
+              <a href="https://github.com/try-horus" target="_blank">
                 <span style="color: #081b53">
                   <i class="fab fa-github fa-lg"></i>
                 </span>
