updated landing copy

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
           <h1 class="h2 centered">your metrics and traces.</h1>
           <br><br>
           <p class="intro-paragraph white-paragraph centered bottom-margin">
-            Horus is an open-source observability solution for microservices. 
-            Users can generate, store, and visualize telemetry to see the real-time health of their application.
+            Horus is an open-source observability solution for distributed applications. 
           </p>
           <div class="button-container">
             <a href="/case-study" class="primary-button right-margin w-inline-block">
@@ -70,8 +69,9 @@
             <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active" id="w-tabs-0-data-w-pane-0" role="tabpanel" aria-labelledby="w-tabs-0-data-w-tab-0">
               <div class="tab-container">
                 <div class="tab-text-wrap">
-                  <h2 class="white-h2 phone-centered">Wave goodbye to<br>ad-hoc solutions. &#x1f44b;</h2>
-                  <p class="intro-paragraph white-paragraph bottom-margin phone-centered" id="intro-paragraph-2">Dendro builds a single source of truth about system state; no more aggregation scripts or cron jobs!</p>
+                  <h2 class="white-h2 phone-centered">Examine, Explore and Enhance<br>Your Application.</h2>
+                  <p class="intro-paragraph white-paragraph bottom-margin phone-centered" id="intro-paragraph-2">Horus generates, stores, and visualizes telemetry data so you can always see the health of your application - in real time!
+                  </p>
                   <a href="https://github.com/dendro-monitoring/dendro" target="_blank" class="primary-button w-inline-block">
                     <div class="primary-button-text">Try It Out</div>
                   </a>
