--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
             </a>
           </div>
         </div>
-        <div data-w-id="c8b52af7-58af-18c7-65ce-aa2950b6601f" class="hero-images-container"><img src="assets/images/cli-deploy.gif" alt="" class="hero-image-left" style="will-change: transform; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"><img src="assets/images/dashboard.png" alt="" class="hero-image-right"></div>
+        <!-- original dendro gif 
+                  <div data-w-id="c8b52af7-58af-18c7-65ce-aa2950b6601f" class="hero-images-container"><img src="assets/images/cli-deploy.gif" alt="" class="hero-image-left" style="will-change: transform; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"><img src="assets/images/dashboard.png" alt="" class="hero-image-right"></div>
+        -->
+        <div class="iframe-container">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/-IrSQNMYBjA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
     <div class="section">
