minor landing page adjustments

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="navigation-container">
           <div class="navigation-left">
             <a href="/" aria-current="page" class="brand w-nav-brand w--current" aria-label="home">
-              <img src="assets/images/logo-mono.png" alt="" class="template-logo">
+              <img src="assets/images/logo-color.png" alt="" class="template-logo">
             </a>
             <nav role="navigation" class="nav-menu w-nav-menu">
               <a href="/case-study" class="link-block w-inline-block">
@@ -75,7 +75,7 @@
             <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active" id="w-tabs-0-data-w-pane-0" role="tabpanel" aria-labelledby="w-tabs-0-data-w-tab-0">
               <div class="tab-container">
                 <div class="tab-text-wrap">
-                  <h2 class="white-h2 phone-centered">Examine, Explore and Enhance<br>Your Application.</h2>
+                  <h2 class="white-h2 phone-centered">Examine, Explore and Enhance Your Application.</h2>
                   <p class="intro-paragraph white-paragraph bottom-margin phone-centered" id="intro-paragraph-2">Horus generates, stores, and visualizes telemetry data so you can always see the health of your application - in real time!
                   </p>
                   <a href="https://github.com/dendro-monitoring/dendro" target="_blank" class="primary-button w-inline-block">
