--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Dendro • Team</title>
+  <title>Horus • Team</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="assets/css/style.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -22,7 +22,7 @@
       <div class="navigation-container">
         <div class="navigation-left">
           <a href="/" aria-current="page" class="brand w-nav-brand w--current" aria-label="home">
-            <img src="assets/images/logo-mono.png" alt="" class="template-logo">
+            <img src="assets/images/logo-color.png" alt="" class="template-logo">
           </a>
           <nav role="navigation" class="nav-menu w-nav-menu">
             <a href="/case-study" class="link-block w-inline-block">
