minor landing page adjustments

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active" id="w-tabs-0-data-w-pane-0" role="tabpanel" aria-labelledby="w-tabs-0-data-w-tab-0">
               <div class="tab-container">
                 <div class="tab-text-wrap">
-                  <h2 class="white-h2 phone-centered">Open-Source Observability<br>Made Easy.</h2>
+                  <h2 class="white-h2 phone-centered">Survey Your System.</h2>
                   <p class="intro-paragraph white-paragraph bottom-margin phone-centered" id="intro-paragraph-2">Horus generates, stores, and visualizes telemetry data so you can always see the health of your application - in real time!
                   </p>
                   <a href="https://github.com/try-horus" target="_blank" class="primary-button w-inline-block">
