--- a/case-study.html
+++ b/case-study.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Dendro • Case Study</title>
+  <title>Horus • Case Study</title>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
