Corrected image for comparison link

--- a/case-study.html
+++ b/case-study.html
@@ -355,7 +355,7 @@
           This incurs a time cost that’s difficult to measure. Oliver and his team could combine well-established telemetry generating options like Prometheus (for metrics), Jaeger (for traces), and Grafana (for visualization), but this also means learning all three products (and more) and configuring them to work effectively together. 
         </p>
         <figure>
-          <img src="assets/images/case-study/comparison-saas-diy.jpeg" class="case-study-image" />
+          <img src="assets/images/case-study/comparison-saas-diy.png" class="case-study-image" />
           <figcaption>Fig. #: Comparison of SaaS and DIY options</figcaption>
         </figure>
         <br />
