removed punctuation on landing page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div>Case Study</div>
               </a>
               <a href="/team" class="link-block w-inline-block">
-                <div>The Team</div>
+                <div>Team</div>
               </a>
             </nav>
           </div>
@@ -50,9 +50,9 @@
       <div class="container">
         <div class="hero-text-container">
           <h1 class="h2 centered">Horus <span id="spin">connects</span></h1>
-          <h1 class="h2 centered">your metrics and traces.</h1>
+          <h1 class="h2 centered">your metrics and traces</h1>
           <p class="intro-paragraph white-paragraph centered bottom-margin">
-            Horus is an open-source observability solution for distributed applications. 
+            Horus is an open-source observability solution for distributed applications
           </p>
           <div class="button-container">
             <a href="/case-study" class="primary-button right-margin w-inline-block">
@@ -75,7 +75,7 @@
             <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active" id="w-tabs-0-data-w-pane-0" role="tabpanel" aria-labelledby="w-tabs-0-data-w-tab-0">
               <div class="tab-container">
                 <div class="tab-text-wrap">
-                  <h2 class="white-h2 phone-centered">Survey Your System.</h2>
+                  <h2 class="white-h2 phone-centered">Survey Your System</h2>
                   <p class="intro-paragraph white-paragraph bottom-margin phone-centered" id="intro-paragraph-2">Horus generates, stores, and visualizes telemetry data so you can always see the health of your application - in real time!
                   </p>
                   <a href="https://github.com/try-horus" target="_blank" class="primary-button w-inline-block">
