--- a/case-study.html
+++ b/case-study.html
@@ -7,7 +7,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:regular,500,600,700" media="all" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Rubik:wght@500&display=swap" rel="stylesheet"> 
   <script type="text/javascript">
     WebFont.load({ google: { families: ["Inter:regular,500,600,700"] } });
   </script>
