--- a/team.html
+++ b/team.html
@@ -7,7 +7,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="assets/css/style.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:regular,500,600,700" media="all">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Rubik:wght@500&display=swap" rel="stylesheet">
   <script type="text/javascript">WebFont.load({ google: { families: ["Inter:regular,500,600,700"] } });</script>
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
@@ -24,16 +24,16 @@
           <a href="/" aria-current="page" class="brand w-nav-brand w--current" aria-label="home">
             <img src="assets/images/logo-color.png" alt="" class="template-logo">
           </a>
+        </div>
+        <div class="navigation-right">
           <nav role="navigation" class="nav-menu w-nav-menu">
             <a href="/case-study" class="link-block w-inline-block">
               <div>Case Study</div>
             </a>
             <a href="/team" class="link-block w-inline-block">
-              <div>The Team</div>
+              <div>Team</div>
             </a>
           </nav>
-        </div>
-        <div class="navigation-right">
           <div class="login-buttons">
             <a href="https://github.com/dendro-monitoring" target="_blank">
               <span style="color: #161d6f">
