Started adding images to CS

--- a/case-study.html
+++ b/case-study.html
@@ -101,7 +101,7 @@
           Evo T-shirts, an e-commerce site, has recently skyrocketed in popularity. What started as one person’s side-hustle has now outgrown a monolithic architecture. The powers that be have decided to move to a microservice architecture for better organization. Oliver has led the team of engineers who built Evo T-shirts for years, and he continues to oversee each sub-team in their now assigned microservice. 
         </p>
         <figure>
-          <img src="assets/images/case-study/evo-without-error.png" class="case-study-image" />
+          <img src="assets/images/case-study/no-errors.gif" class="case-study-image" />
           <figcaption>Fig. 1: Part of Evo T-Shirt's architecture</figcaption>
         </figure>
         <br />
@@ -117,8 +117,8 @@
           Several engineers on his team try recreating the problem, too. Some of them receive the same errors customers were complaining about, while others do not. They’re not sure why it’s happening for some and not others. Oliver’s last resort is to look at the logs of each microservice, hoping they’ll contain information about the alleged errors. 
         </p>
         <figure>
-          <img src="assets/images/case-study/stand-in.jpeg" class="case-study-image" />
-          <figcaption>Fig. #: Filler to where an image should go</figcaption>
+          <img src="assets/images/case-study/evo-error.gif" class="case-study-image" />
+          <figcaption>Fig. 2: Users are encountering errors with Evo T-Shirts</figcaption>
         </figure>
         <br />
         <p>
@@ -230,7 +230,7 @@
           By establishing a relationship between the macro nature of metrics and detailed nuances of traces, Oliver is able to achieve the observability coverage he's looking for by recording the interactions that are taking place across the distributed services. Oliver can then "jump" between a high-level and low-level perspective by switching between metrics and traces. 
         </p>
         <figure>
-          <img src="assets/images/case-study/evo-with-agent.png" class="case-study-image" />
+          <img src="assets/images/case-study/evo-with-horus.gif" class="case-study-image" />
           <figcaption>Fig. #: Evo T-Shirts with Horus instruementation via horus agent</figcaption>
         </figure>
         <br>
@@ -248,7 +248,7 @@
         </p>
         <figure>
           <img src="assets/images/case-study/telemetry-pipeline.png" class="case-study-image" />
-          <figcaption>Fig. #: The Telemetry Pipeline</figcaption>
+          <figcaption>Fig. #: The Telemetry Pipeline — to be revised</figcaption>
         </figure>
         <br>
         <h4>The Emitting Stage</h4>
@@ -376,8 +376,8 @@
         </p>
         <br />
         <figure>
-          <img src="assets/images/case-study/stand-in.jpeg" class="case-study-image" />
-          <figcaption>Fig. #: Filler to where an image should go</figcaption>
+          <img src="assets/images/case-study/logo-color.png" class="case-study-image case-study-image-smaller" />
+          <figcaption>Fig. #: Horus</figcaption>
         </figure>
         <p>
           Designed with the user in mind, it makes the integration, generation, and visualization of application monitoring seamless and straightforward. 
@@ -396,8 +396,8 @@
         </p>
         <br />
         <figure>
-          <img src="assets/images/case-study/stand-in.jpeg" class="case-study-image" />
-          <figcaption>Fig. #: Filler to where an image should go</figcaption>
+          <img src="assets/images/case-study/horus-docker.png" class="case-study-image" />
+          <figcaption>Fig. #: Horus infrastructure in a Docker network</figcaption>
         </figure>
         <p>
           Horus removes the friction of combining components like Jaeger, Prometheus, and Grafana together to achieve observability by providing purpose-built components that reduce the potential set up time from hours or days to minutes. 
@@ -420,8 +420,8 @@
           <li>Latency Health over 10 seconds</li>
         </ul>
         <figure>
-          <img src="assets/images/case-study/stand-in.jpeg" class="case-study-image" />
-          <figcaption>Fig. #: Filler to where an image should go</figcaption>
+          <img src="assets/images/case-study/gif-of-ui-1.gif" class="case-study-image" />
+          <figcaption>Fig. #: Interacting with the Horus Metrics and Traces</figcaption>
         </figure>
         <br>
         <p>
@@ -436,8 +436,8 @@
           Want more information on a particular trace? Just click the trace you’re interested in and you’ll be directed to a waterfall chart where you can compare each of the spans and get any further details you require. 
         </p>
         <figure>
-          <img src="assets/images/case-study/stand-in.jpeg" class="case-study-image" />
-          <figcaption>Fig. #: Filler to where an image should go</figcaption>
+          <img src="assets/images/case-study/gif-of-ui-2.gif" class="case-study-image" />
+          <figcaption>Fig. #: Interacting with the Horus Traces and Single Trace</figcaption>
         </figure>
         <br>
         <p>
