added new format of video, changed background colour and added team info

--- a/index.html
+++ b/index.html
@@ -60,11 +60,8 @@
             </a>
           </div>
         </div>
-        <!-- original dendro gif 
-                  <div data-w-id="c8b52af7-58af-18c7-65ce-aa2950b6601f" class="hero-images-container"><img src="assets/images/cli-deploy.gif" alt="" class="hero-image-left" style="will-change: transform; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"><img src="assets/images/dashboard.png" alt="" class="hero-image-right"></div>
-        -->
         <div class="iframe-container">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/-IrSQNMYBjA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/a3jg1b?loop=0" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
         </div>
       </div>
     </div>
@@ -82,7 +79,7 @@
                     <div class="primary-button-text">Try It Out</div>
                   </a>
                 </div>
-                <div class="tab-image-wrap"><img src="assets/images/abstract-service-pic.png" loading="lazy" alt=""></div>
+                <div class="tab-image-wrap"><img src="assets/images/Storage and Querying.jpg" loading="lazy" alt=""></div>
               </div>
             </div>
           </div>
