--- a/team.html
+++ b/team.html
@@ -35,7 +35,7 @@
             </a>
           </nav>
           <div class="login-buttons">
-            <a href="https://github.com/dendro-monitoring" target="_blank">
+            <a href="https://github.com/try-horus" target="_blank">
               <span style="color: #161d6f">
                 <i class="fab fa-github fa-lg"></i>
               </span>
@@ -51,8 +51,6 @@
       <div class="hero-text-container">
         <h1 class="h1 centered">The Team</h1>
       </div>
-      <p class="intro-paragraph white-paragraph centered" id="team-paragraph">Haven is built by a remote team of
-        software engineers. We're currently looking for our next opportunities. Let's talk!</p>
     </div>
   </div>
 
@@ -65,28 +63,29 @@
           <div>
             <div class="team-grid">
               <div class="team-member-wrap">
-                <img src="assets/images/team/andrew.jpg" loading="lazy" alt="">
+                <img src="assets/images/team/Rich-modified.png" loading="lazy" alt="">
                 <div class="team-member-info">
-                  <div class="team-member-name">Andi Crotwell</div>
-                  <div class="team-member-location">Anaheim, CA</div>
+                  <div class="team-member-name">Richard Morris</div>
+                  <div class="team-member-location">London, UK</div>
                 </div>
                 <ul class="team-member-icons">
                   <li>
-                    <a href="mailto:awcrotwell@gmail.com" target="_blank">
+                    <a href="mailto:richwynmorris@protonmail.com" target="_blank">
                       <span class="team-member-icon">
                         <i class="fas fa-envelope"></i>
                       </span>
                     </a>
                   </li>
                   <li>
-                    <a href="https://awcrotwell.com" target="_blank">
+                    <a href="https://richmorris.co.uk" target="_blank">
                       <span class="team-member-icon">
                         <i class="fas fa-globe"></i>
                       </span>
                     </a>
                   </li>
                   <li>
-                    <a href="https://linkedin.com/in/awcrotwell" target="_blank">
+                    <!-- ADD RM LINKEDIN HERE-->
+                    <a href="" target="_blank">
                       <span class="team-member-icon">
                         <i class="fab fa-linkedin"></i>
                       </span>
@@ -95,13 +94,14 @@
                 </ul>
               </div>
               <div class="team-member-wrap">
-                <img src="assets/images/team/pete.png" loading="lazy" alt="">
+                <img src="assets/images/team/Callie-modified.png" loading="lazy" alt="">
                 <div class="team-member-info">
-                  <div class="team-member-name">Peter D'Elia</div>
-                  <div class="team-member-location">Charlottesville, VA</div>
+                  <div class="team-member-name">Callie Buruchara</div>
+                  <div class="team-member-location">Maryland, USA</div>
                 </div>
                 <ul class="team-member-icons">
                   <li>
+                    <!-- ADD CB EMAIL HERE-->
                     <a href="mailto:petertdelia@gmail.com" target="_blank">
                       <span class="team-member-icon">
                         <i class="fas fa-envelope"></i>
@@ -109,6 +109,7 @@
                     </a>
                   </li>
                   <li>
+                    <!-- ADD CB website HERE-->
                     <a href="https://peterdelia.com" target="_blank">
                       <span class="team-member-icon">
                         <i class="fas fa-globe"></i>
@@ -116,6 +117,7 @@
                     </a>
                   </li>
                   <li>
+                    <!-- ADD CB linkedin HERE-->
                     <a href="https://linkedin.com/in/peter-delia" target="_blank">
                       <span class="team-member-icon">
                         <i class="fab fa-linkedin"></i>
@@ -125,28 +127,28 @@
                 </ul>
               </div>
               <div class="team-member-wrap">
-                <img src="assets/images/team/nick.jpeg" loading="lazy" alt="">
+                <img src="assets/images/team/José-modified.png" loading="lazy" alt="">
                 <div class="team-member-info">
-                  <div class="team-member-name">Nicholas LiCalzi</div>
-                  <div class="team-member-location">Brooklyn, NY</div>
+                  <div class="team-member-name">José de la Puente</div>
+                  <div class="team-member-location">London, UK</div>
                 </div>
                 <ul class="team-member-icons">
                   <li>
-                    <a href="mailto:nicholas.licalzi@gmail.com" target="_blank">
+                    <a href="mailto:14jdelap@gmail.com" target="_blank">
                       <span class="team-member-icon">
                         <i class="fas fa-envelope"></i>
                       </span>
                     </a>
                   </li>
                   <li>
-                    <a href="https://nlicalzi.com" target="_blank">
+                    <a href="https://www.josedelapuente.com" target="_blank">
                       <span class="team-member-icon">
                         <i class="fas fa-globe"></i>
                       </span>
                     </a>
                   </li>
                   <li>
-                    <a href="https://linkedin.com/in/nicholaslicalzi" target="_blank">
+                    <a href="https://www.linkedin.com/in/ja-puente/" target="_blank">
                       <span class="team-member-icon">
                         <i class="fab fa-linkedin"></i>
                       </span>
@@ -155,20 +157,21 @@
                 </ul>
               </div>
               <div class="team-member-wrap">
-                <img src="assets/images/team/angel.jpeg" loading="lazy" alt="">
+                <img src="assets/images/team/juan-modified.png" loading="lazy" alt="">
                 <div class="team-member-info">
-                  <div class="team-member-name">Angel Ruiz-Bates</div>
-                  <div class="team-member-location">Tucson, AZ</div>
+                  <div class="team-member-name">Juan García</div>
+                  <div class="team-member-location">Madrid, Spain</div>
                 </div>
                 <ul class="team-member-icons">
                   <li>
-                    <a href="mailto:angeljrbt@gmail.com" target="_blank">
+                    <a href="mailto:srgarci79@gmail.com" target="_blank">
                       <span class="team-member-icon">
                         <i class="fas fa-envelope"></i>
                       </span>
                     </a>
                   </li>
                   <li>
+                    <!-- ADD JG wEBSTIE HERE-->
                     <a href="https://angelruizbates.com/" target="_blank">
                       <span class="team-member-icon">
                         <i class="fas fa-globe"></i>
@@ -176,7 +179,8 @@
                     </a>
                   </li>
                   <li>
-                    <a href="https://www.linkedin.com/in/angel-ruiz-bates-1b68a2142/" target="_blank">
+                    <!-- ADD JG Linkedin HERE-->
+                    <a href="https://www.linkedin.com/in/juan-garc%C3%ADa-moreno-21bbbb155/" target="_blank">
                       <span class="team-member-icon">
                         <i class="fab fa-linkedin"></i>
                       </span>
