changed logo colour on all pages, moved nav and updated logo on case study page

--- a/team.html
+++ b/team.html
@@ -36,7 +36,7 @@
           </nav>
           <div class="login-buttons">
             <a href="https://github.com/try-horus" target="_blank">
-              <span style="color: #161d6f">
+              <span style="color: #081b53">
                 <i class="fab fa-github fa-lg"></i>
               </span>
             </a>
