--- a/case-study.html
+++ b/case-study.html
@@ -33,8 +33,10 @@
       <div class="navigation-container">
         <div class="navigation-left">
           <a href="/" aria-current="page" class="brand w-nav-brand w—current" aria-label="home">
-            <img src="assets/images/logo-mono.png" alt="" class="template-logo" />
+            <img src="assets/images/logo-color.png" alt="" class="template-logo" />
           </a>
+        </div>
+        <div class="navigation-right">
           <nav role="navigation" class="nav-menu w-nav-menu">
             <a href="/case-study" class="link-block w-inline-block">
               <div>Case Study</div>
@@ -43,11 +45,9 @@
               <div>The Team</div>
             </a>
           </nav>
-        </div>
-        <div class="navigation-right">
           <div class="login-buttons">
             <a href="https://github.com/dendro-monitoring" target="_blank">
-              <span style="color: #161d6f">
+              <span style="color: #081b53">
                 <i class="fab fa-github fa-lg"></i>
               </span>
             </a>
