changed link for github icon, changed team link to team

--- a/case-study.html
+++ b/case-study.html
@@ -42,11 +42,11 @@
               <div>Case Study</div>
             </a>
             <a href="/team" class="link-block w-inline-block">
-              <div>The Team</div>
+              <div>Team</div>
             </a>
           </nav>
           <div class="login-buttons">
-            <a href="https://github.com/dendro-monitoring" target="_blank">
+            <a href="https://github.com/try-horus" target="_blank">
               <span style="color: #081b53">
                 <i class="fab fa-github fa-lg"></i>
               </span>
