added pictures and links to team section in case study

--- a/case-study.html
+++ b/case-study.html
@@ -832,28 +832,29 @@
                 <div>
                   <div class="team-grid">
                     <div class="team-member-wrap">
-                      <img src="assets/images/team/andrew.jpg" loading="lazy" alt="" />
+                      <img src="assets/images/team/Rich-modified.png" loading="lazy" alt="" />
                       <div class="team-member-info">
-                        <div class="team-member-name">Andi Crotwell</div>
-                        <div class="team-member-location">Anaheim, CA</div>
+                        <div class="team-member-name">Richard Morris</div>
+                        <div class="team-member-location">London, UK</div>
                       </div>
                       <ul class="team-member-icons">
                         <li>
-                          <a href="mailto:awcrotwell@gmail.com" target="_blank">
+                          <a href="mailto:richwynmorris@protonmail.com" target="_blank">
                             <span class="team-member-icon">
                               <i class="fas fa-envelope"></i>
                             </span>
                           </a>
                         </li>
                         <li>
-                          <a href="https://awcrotwell.com" target="_blank">
+                          <a href="https://www.richmorris.co.uk" target="_blank">
                             <span class="team-member-icon">
                               <i class="fas fa-globe"></i>
                             </span>
                           </a>
                         </li>
                         <li>
-                          <a href="https://linkedin.com/in/awcrotwell" target="_blank">
+                          <!-- Add linked in for RM-->
+                          <a href="" target="_blank">
                             <span class="team-member-icon">
                               <i class="fab fa-linkedin"></i>
                             </span>
@@ -862,28 +863,31 @@
                       </ul>
                     </div>
                     <div class="team-member-wrap">
-                      <img src="assets/images/team/pete.png" loading="lazy" alt="">
+                      <img src="assets/images/team/Callie-modified.png" loading="lazy" alt="">
                       <div class="team-member-info">
-                        <div class="team-member-name">Peter D'Elia</div>
-                        <div class="team-member-location">Charlottesville, VA</div>
+                        <div class="team-member-name">Callie Buruchara</div>
+                        <div class="team-member-location">Maryland, USA</div>
                       </div>
                       <ul class="team-member-icons">
                         <li>
-                          <a href="mailto:petertdelia@gmail.com" target="_blank">
+                          <!-- Add CB email-->
+                          <a href="mailto:" target="_blank">
                             <span class="team-member-icon">
                               <i class="fas fa-envelope"></i>
                             </span>
                           </a>
                         </li>
                         <li>
-                          <a href="https://peterdelia.com" target="_blank">
+                          <!-- Add CB website-->
+                          <a href="https://" target="_blank">
                             <span class="team-member-icon">
                               <i class="fas fa-globe"></i>
                             </span>
                           </a>
                         </li>
                         <li>
-                          <a href="https://linkedin.com/in/peter-delia" target="_blank">
+                          <!-- Add CB linkedin-->
+                          <a href="" target="_blank">
                             <span class="team-member-icon">
                               <i class="fab fa-linkedin"></i>
                             </span>
@@ -892,28 +896,28 @@
                       </ul>
                     </div>
                     <div class="team-member-wrap">
-                      <img src="assets/images/team/nick.jpeg" loading="lazy" alt="">
+                      <img src="assets/images/team/José-modified.png" loading="lazy" alt="">
                       <div class="team-member-info">
-                        <div class="team-member-name">Nicholas LiCalzi</div>
-                        <div class="team-member-location">Brooklyn, NY</div>
+                        <div class="team-member-name">José de la Puente</div>
+                        <div class="team-member-location">London, UK</div>
                       </div>
                       <ul class="team-member-icons">
                         <li>
-                          <a href="mailto:nicholas.licalzi@gmail.com" target="_blank">
+                          <a href="mailto:14jdelap@gmail.com" target="_blank">
                             <span class="team-member-icon">
                               <i class="fas fa-envelope"></i>
                             </span>
                           </a>
                         </li>
                         <li>
-                          <a href="https://nlicalzi.com" target="_blank">
+                          <a href="https://www.josedelapuente.com" target="_blank">
                             <span class="team-member-icon">
                               <i class="fas fa-globe"></i>
                             </span>
                           </a>
                         </li>
                         <li>
-                          <a href="https://linkedin.com/in/nicholaslicalzi" target="_blank">
+                          <a href="https://www.linkedin.com/in/ja-puente/" target="_blank">
                             <span class="team-member-icon">
                               <i class="fab fa-linkedin"></i>
                             </span>
@@ -922,28 +926,29 @@
                       </ul>
                     </div>
                     <div class="team-member-wrap">
-                      <img src="assets/images/team/angel.jpeg" loading="lazy" alt="">
+                      <img src="assets/images/team/juan-modified.png" loading="lazy" alt="">
                       <div class="team-member-info">
-                        <div class="team-member-name">Angel Ruiz-Bates</div>
-                        <div class="team-member-location">Tucson, AZ</div>
+                        <div class="team-member-name">Juan García</div>
+                        <div class="team-member-location">Madrid, Spain</div>
                       </div>
                       <ul class="team-member-icons">
                         <li>
-                          <a href="mailto:angeljrbt@gmail.com" target="_blank">
+                          <a href="mailto:srgarci79@gmail.com" target="_blank">
                             <span class="team-member-icon">
                               <i class="fas fa-envelope"></i>
                             </span>
                           </a>
                         </li>
                         <li>
-                          <a href="https://angelruizbates.com/" target="_blank">
+                          <!-- Add website for JG-->
+                          <a href="" target="_blank">
                             <span class="team-member-icon">
                               <i class="fas fa-globe"></i>
                             </span>
                           </a>
                         </li>
                         <li>
-                          <a href="https://www.linkedin.com/in/angel-ruiz-bates-1b68a2142/" target="_blank">
+                          <a href="https://www.linkedin.com/in/juan-garc%C3%ADa-moreno-21bbbb155/" target="_blank">
                             <span class="team-member-icon">
                               <i class="fab fa-linkedin"></i>
                             </span>
