updating team details on case study and team pages

--- a/case-study.html
+++ b/case-study.html
@@ -871,15 +871,14 @@
                       <ul class="team-member-icons">
                         <li>
                           <!-- Add CB email-->
-                          <a href="mailto:" target="_blank">
+                          <a href="mailto:callie.buruchara@hey.com" target="_blank">
                             <span class="team-member-icon">
                               <i class="fas fa-envelope"></i>
                             </span>
                           </a>
                         </li>
                         <li>
-                          <!-- Add CB website-->
-                          <a href="https://" target="_blank">
+                          <a href="https://callieb.dev/" target="_blank">
                             <span class="team-member-icon">
                               <i class="fas fa-globe"></i>
                             </span>
