--- a/team.html
+++ b/team.html
@@ -101,16 +101,14 @@
                 </div>
                 <ul class="team-member-icons">
                   <li>
-                    <!-- ADD CB EMAIL HERE-->
-                    <a href="mailto:petertdelia@gmail.com" target="_blank">
+                    <a href="mailto:callie.buruchara@hey.com" target="_blank">
                       <span class="team-member-icon">
                         <i class="fas fa-envelope"></i>
                       </span>
                     </a>
                   </li>
                   <li>
-                    <!-- ADD CB website HERE-->
-                    <a href="https://peterdelia.com" target="_blank">
+                    <a href="https://callieb.dev/" target="_blank">
                       <span class="team-member-icon">
                         <i class="fas fa-globe"></i>
                       </span>
@@ -118,7 +116,7 @@
                   </li>
                   <li>
                     <!-- ADD CB linkedin HERE-->
-                    <a href="https://linkedin.com/in/peter-delia" target="_blank">
+                    <a href="" target="_blank">
                       <span class="team-member-icon">
                         <i class="fab fa-linkedin"></i>
                       </span>
@@ -172,7 +170,7 @@
                   </li>
                   <li>
                     <!-- ADD JG wEBSTIE HERE-->
-                    <a href="https://angelruizbates.com/" target="_blank">
+                    <a href="" target="_blank">
                       <span class="team-member-icon">
                         <i class="fas fa-globe"></i>
                       </span>
