updated header logo

--- a/team.html
+++ b/team.html
@@ -22,7 +22,7 @@
       <div class="navigation-container">
         <div class="navigation-left">
           <a href="/" aria-current="page" class="brand w-nav-brand w--current" aria-label="home">
-            <img src="assets/images/logo-color.png" alt="" class="template-logo">
+            <img src="assets/images/horus_logo color.png" alt="" class="template-logo">
           </a>
         </div>
         <div class="navigation-right">
